# bank_statement

./: README.md  app.py  extraccion.txt  pyproject.toml  report.md  reporte.txt
src/bank_statement/: crew.py  main.py
src/bank_statement/config/: agents.yaml  tasks.yaml
utils/: pdf.py  styles.py
