[project]
name = "bank_statement"
version = "0.1.0"
description = "bank_statement using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
bank_statement = "bank_statement.main:run"
run_crew = "bank_statement.main:run"
train = "bank_statement.main:train"
replay = "bank_statement.main:replay"
test = "bank_statement.main:test"
run_with_trigger = "bank_statement.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
